# simple-2d-engine-demo

./: .clang-format  .gitignore  .gitmodules  README.md
assets/fonts/arcade_ya/: Readme.TXT
assets/shaders/android/: text.frag
projects/android/app/: build.gradle
projects/android/app/src/main/cpp/: CMakeLists.txt  Renderer.cpp  Renderer.h
projects/osx/: CMakeLists.txt  OpenGLRenderer.cpp  main.cpp  simple-2d-engine-demo
src/: SampleGame.cpp  SampleGame.hpp
src/objects/: Rocket.hpp
src/view/: GameView.cpp  GameView.hpp
